log
Sun 12 Mar 2023 12:14:18 AM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|6
total_score: 10/70
20b4c50
Thu 16 Mar 2023 03:40:10 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|5
total_score: 20/70
8a2948d
Thu 16 Mar 2023 03:57:05 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
6370d30
Thu 16 Mar 2023 03:58:12 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
e21d948
Thu 16 Mar 2023 08:15:45 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
5e8f6a6
Thu 16 Mar 2023 08:18:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:84:10: error: assignment to ‘Vector *’ from incompatible pointer type ‘struct Vector *’ [-Werror=incompatible-pointer-types]
   84 |   arreglo=(struct Vector*) calloc(n,sizeof(Vector));
      |          ^
cc1: all warnings being treated as errors
Compilation failed
aab72e1
Thu 16 Mar 2023 08:18:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
f933b6f
Thu 16 Mar 2023 08:32:55 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
225d57b
Thu 16 Mar 2023 08:34:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
6574567
Thu 16 Mar 2023 08:35:35 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:88:5: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   88 |     scanf("%i",&arreglo[i].capacidad);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
772a1fc
Thu 16 Mar 2023 08:36:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
10a5e5a
Thu 16 Mar 2023 08:43:25 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:102:8: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
  102 |   v[i]=valor;
      |        ^~~~~
Compilation failed
35136e2
Thu 16 Mar 2023 08:45:39 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
2788235
Thu 16 Mar 2023 08:49:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:102:7: error: invalid type argument of ‘->’ (have ‘Vector’)
  102 |   v[i]->datos[i] = valor;
      |       ^~
Compilation failed
68b37df
Thu 16 Mar 2023 08:49:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
eaaae29
Thu 16 Mar 2023 08:50:29 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
07e8102
Thu 16 Mar 2023 08:55:26 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
8d08df2
Thu 16 Mar 2023 08:55:38 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
e0bd56c
Thu 16 Mar 2023 08:58:04 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
657b1e6
Thu 16 Mar 2023 08:58:32 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘obtenerValor’:
exercises.c:111:11: error: ‘v’ is a pointer; did you mean to use ‘->’?
  111 |   return v.datos[i];
      |           ^
      |           ->
exercises.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e0feddc
Thu 16 Mar 2023 08:58:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘obtenerValor’:
exercises.c:111:11: error: incompatible types when returning type ‘Vector’ but ‘int’ was expected
  111 |   return v[i];
      |          ~^~~
exercises.c:112:1: error: control reaches end of non-void function [-Werror=return-type]
  112 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cb36230
Thu 16 Mar 2023 09:01:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
2bd2f3a
Thu 16 Mar 2023 09:04:36 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
44ac1a6
Thu 16 Mar 2023 09:04:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
ae23905
Thu 16 Mar 2023 09:05:06 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
total_score: 40/70
a1f783e
Thu 16 Mar 2023 09:07:39 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
a05d693
Thu 16 Mar 2023 09:09:51 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 50/70
f99d641
Thu 16 Mar 2023 09:17:20 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
757f4b5
Thu 16 Mar 2023 09:20:58 PM UTC: 
 exercises.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
 tests:  7|1
total_score: 60/70
816ba26
Thu 16 Mar 2023 09:26:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
048eb09
Thu 16 Mar 2023 09:31:49 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|1
total_score: 60/70
db32271
Thu 16 Mar 2023 09:32:17 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 60/70
9319db1
Thu 16 Mar 2023 09:32:39 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
3ec258b
Thu 16 Mar 2023 10:35:35 PM UTC: 
 exercises.c | 17 ++++++-----------
 1 file changed, 6 insertions(+), 11 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:86:40: error: ‘vector’ is a pointer; did you mean to use ‘->’?
   86 |   vector[0].datos=(int *) calloc(vector.capacidad, sizeof(int));
      |                                        ^
      |                                        ->
Compilation failed
af7fceb
Thu 16 Mar 2023 10:35:56 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
df9650a
Thu 16 Mar 2023 10:37:38 PM UTC: 
 exercises.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:85:20: error: ‘vector’ is used uninitialized [-Werror=uninitialized]
   85 |   vector->capacidad=n;
      |   ~~~~~~~~~~~~~~~~~^~
cc1: all warnings being treated as errors
Compilation failed
e8c9ff2
Thu 16 Mar 2023 10:38:11 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:85:16: error: ‘vector’ is used uninitialized [-Werror=uninitialized]
   85 |   vector->datos=(int *) calloc(n, sizeof(int));
      |   ~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eccf9fb
Thu 16 Mar 2023 10:39:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 60/70
3d42c74
Thu 16 Mar 2023 10:42:56 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|0
total_score: 70/70
b4eb32d
Thu 16 Mar 2023 10:54:23 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  8|0
total_score: 70/70
53a19ad
Thu 16 Mar 2023 10:54:44 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|0
total_score: 70/70
e1a1582
